--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ HOST= localhost
 DATABASE= demeritos
 USER = root
 PASSWORD = 
+PORT = 3306
+# produccion
+# HOST= bywxyr1wr2reakrnugat-mysql.services.clever-cloud.com
+# DATABASE= bywxyr1wr2reakrnugat
+# USER = uhxk60zznlapj8gp
+# PASSWORD = jpcp7TaBwf62ymZzrzTk
+# PORT = 3306
+
